--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -129,7 +129,7 @@
         }
     
     section.hero {
-            background: linear-gradient(rgba(0, 102, 179, 0.4), rgba(0, 77, 140, 0.4)), url('{{url_for('static', filename='img_4080.jpg')}}');
+            background: linear-gradient(rgba(0, 102, 179, 0.4), rgba(0, 77, 140, 0.4)), url('{{url_for('static', filename='IMG_4080.JPG')}}');
             background-size: cover;
             background-position: center;
             /*background-repeat: no-repeat;*/
